--- a/to-do-list-app/src/components/ManageTasks/CreateProjectsAndTask.module.css
+++ b/to-do-list-app/src/components/ManageTasks/CreateProjectsAndTask.module.css
@@ -3,6 +3,10 @@
     flex-wrap: wrap;
 }
 
-.project-heading {
+.projectHeading {
+    font-size: 32px;
+    text-decoration: none;
     color: black;
+    border-radius: 0;
+    border-bottom: 1px solid #A6A4A2;
 }
