--- a/to-do-list-app/src/components/ManageTasks/CreateProjectsAndTask.module.css
+++ b/to-do-list-app/src/components/ManageTasks/CreateProjectsAndTask.module.css
@@ -5,8 +5,8 @@
 
 .projectHeading {
     font-size: 32px;
-    text-decoration: none;
-    color: black;
+    text-decoration: none !important;
+    color: black !important;
     border-radius: 0;
-    border-bottom: 1px solid #A6A4A2;
+    border-bottom: 1px solid #A6A4A2 !important;
 }
