--- a/to-do-list-app/src/components/ManageTasks/CreateProjectsAndTask.module.css
+++ b/to-do-list-app/src/components/ManageTasks/CreateProjectsAndTask.module.css
@@ -5,8 +5,10 @@
 
 .projectHeading {
     font-size: 32px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 900 !important;
     text-decoration: none !important;
-    color: black !important;
+    color: #1F160A !important;
     border-radius: 0;
     border-bottom: 1px solid #A6A4A2 !important;
 }
