--- a/to-do-list-app/src/components/NavBar/TopNavbar.css
+++ b/to-do-list-app/src/components/NavBar/TopNavbar.css
@@ -59,6 +59,28 @@ nav .menu span {
     border-radius: 0.2rem;
 }
 
+.offcanvas-col {
+    transition: width 0.3s ease-in-out;
+    overflow-x: hidden;
+  }
+  
+  .offcanvas-col {
+    transition: width 0.3s ease-in-out;
+    overflow-x: hidden;
+  }
+  
+  .offcanvas-toggle-btn {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    z-index: 1001;  /* Ensures the button is always clickable */
+  }
+  
+  .offcanvas-toggle-btn .rotate {
+    transform: rotate(180deg);
+    transition: transform 0.3s ease-in-out;
+  }
+
 
 @media (max-width: 480px) {
     nav .menu {
