--- a/to-do-list-app/src/components/ManageTasks/CreateProjectsAndTask.module.css
+++ b/to-do-list-app/src/components/ManageTasks/CreateProjectsAndTask.module.css
@@ -12,3 +12,15 @@
     border-radius: 0;
     border-bottom: 1px solid #A6A4A2 !important;
 }
+
+.taskItem {
+    margin-left: 10px;
+}
+
+.taskItem:hover .editIcon {
+    visibility: visible;
+}
+
+.editIcon {
+    visibility: hidden; 
+}
