Integrated most Task functionality into UI & cleaned
Added create task button to DisplayProject
Added TaskModal for creating tasks
Added generic confirmation TaskModal
Added ProjectModal for creating projects
Move formate date to it's own functionality
Moved all Task Utils living in Display Project to TaskUtils
Removed some uneeded hooks from DisplayProject
Removed some uneeded console logs from DashboardLayout
Added a create project button to Dashboard
Added Calendar icon to project display, and have calender icon change color based on task input
Corrected bug where projects where not getting selected from card settings
Next Steps:
- Add ability to edit task dates
- Add ability to edit projects
- Add ability to delete projects
- Add ability edit task color (non critical)
- Add abilit to edit project color (non critical)

--- a/to-do-list-app/src/components/Dashboard/Dashboard.module.css
+++ b/to-do-list-app/src/components/Dashboard/Dashboard.module.css
@@ -12,3 +12,20 @@
 .lockButton:hover{
     background-color: #AAA399 !important;
 }
+
+.createProjectButton {
+    height: 44px;
+    width: fit-content;
+    align-items: center !important;
+    color: #AAA399;
+    margin: 0;
+    margin-right: 20px !important;
+    border: 1px solid #AAA399 !important;
+    background-color: transparent;
+}
+
+.createProjectButton:focus,
+.createProjectButton.focus,
+.createProjectButton:hover{
+    background-color: #AAA399 !important;
+}
