--- a/to-do-list-app/src/components/ManageTasks/CreateProjectsAndTask.module.css
+++ b/to-do-list-app/src/components/ManageTasks/CreateProjectsAndTask.module.css
@@ -17,7 +17,7 @@
     margin-left: 10px;
 }
 
-.taskItem:hover .editIcon {
+.taskItem:hover .editIcon, .projectItem:hover .editIcon {
     visibility: visible;
 }
 
