--- a/to-do-list-app/src/components/ManageTasks/CreateProjectsAndTask.module.css
+++ b/to-do-list-app/src/components/ManageTasks/CreateProjectsAndTask.module.css
@@ -13,6 +13,18 @@
     border-bottom: 1px solid #A6A4A2 !important;
 }
 
+.completeTaskButton {
+    width: 20px;
+    height: 20px;
+    border: none;
+    outline: none;
+    transition: transform 0.1s, background-color 0.1s;
+}
+
+.completeTaskButton:active {
+    transform: scale(0.9);
+}
+
 .taskItem {
     margin-left: 10px;
 }
