--- a/to-do-list-app/src/components/Settings/Settings.module.css
+++ b/to-do-list-app/src/components/Settings/Settings.module.css
@@ -1,10 +1,10 @@
 .Sidebar {
     position: fixed;
-    top: 52px; 
-    right: 0; 
-    height: calc(100vh - 52px - 50px);
-    width: 75px; 
-    background-color: rgba(173, 216, 230, 0.5); 
+    top: 57px; 
+    right: 50px; 
+    height: calc(100vh - 60px - 800px);
+    width: 250px; 
+    background-color: rgba(251, 251, 251, 0.914);  
     padding: 10px; 
     box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.1); 
     z-index: 1000; 
@@ -17,8 +17,25 @@
 
 .LogoutButton {
     margin-top: 10px; 
+    padding: 5px 10px;
+    margin-right: 30px;
+    background: none;
+    border: none; 
+    outline: none;
     padding: 5px 10px; 
+    cursor: pointer;  
+    
 }
+
+.LogoutButton:hover {
+    background-color: rgba(220, 220, 220, 0.8); 
+}
+
+.LogoutButton img {
+    width: 20px;  
+    height: auto; 
+    margin-right: 90px; 
+  }
 
 @media (max-width: 768px) {
     .Sidebar {
