--- a/to-do-list-app/src/components/DashboardLayout/DashboardLayout.module.css
+++ b/to-do-list-app/src/components/DashboardLayout/DashboardLayout.module.css
@@ -4,8 +4,16 @@
     align-items: center !important;
     margin: 0;
     background-color: transparent;
+    padding: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
     margin-top: 10px;
     margin-right: 10px;
+}
+
+.editCardButton svg {
+    display: block !important;
+    margin: auto !important;
 }
 
 .editCardButton:focus,
