--- a/to-do-list-app/src/components/TaskChart/CalendarWidget.css
+++ b/to-do-list-app/src/components/TaskChart/CalendarWidget.css
@@ -1,3 +1,8 @@
+.react-calendar {
+    height: 100% !important;  /* Override default react-calendar styling */
+    width: 100%  !important;
+  }
+
 .widget {
     background-color: #f0f0f0;
     padding: 10px;
