--- a/to-do-list-app/src/components/DashboardLayout/DashboardLayout.module.css
+++ b/to-do-list-app/src/components/DashboardLayout/DashboardLayout.module.css
@@ -87,3 +87,15 @@
     background-color: green !important;
     border-color: green !important;
 }
+
+.btnCustomColor {
+    background-color: #F0AF4D !important;
+    color: white !important;
+
+}
+
+.btnCustomColor:hover,
+.btnCustomColor:focus,
+.btnCustomColor:active {
+    background-color: gray !important;
+}
