Fix scroll bars and change add new card button

--- a/to-do-list-app/src/components/DashboardLayout/DashboardLayout.module.css
+++ b/to-do-list-app/src/components/DashboardLayout/DashboardLayout.module.css
@@ -99,3 +99,18 @@
 .btnCustomColor:active {
     background-color: gray !important;
 }
+
+.addCardButton {
+    position: fixed; 
+    top: 70px;
+    left: 50px;
+    height: 44px;
+    width: fit-content;
+    align-items: center !important;
+    margin: 0;
+    border: 1px solid #AAA399 !important;
+    }
+
+.dashboardLayoutStyle{
+    overflow: "auto";
+}
