--- a/to-do-list-app/src/components/NavBar/TopNavbar.module.css
+++ b/to-do-list-app/src/components/NavBar/TopNavbar.module.css
@@ -10,6 +10,7 @@
     justify-content: space-between; 
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); 
     z-index: 1000;
+    height: 60 px;
 }
 
 .TopNavbar .TaskInfo, .SettingsIconContainer {
