--- a/to-do-list-app/src/components/TaskChart/CalendarWidget.css
+++ b/to-do-list-app/src/components/TaskChart/CalendarWidget.css
@@ -19,19 +19,22 @@
     border-radius: 50%;
   }
 
-  .red-circle {
-    width: 10px;
-    height: 10px;
+  .react-calendar__tile--active {
+    background-color: #F0AF4D  !important;
+    border: 2px solid #F0AF4D !important;
+    border-radius: 15%;
+  }
+
+  .circle-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .base-circle {
+    width: 10px !important;
+    height: 10px !important;
     border-radius: 50%;
-    margin-left: 15px;
-  }
-
-  .blue-circle {
-    background-color: blue;
-    margin-left: 31px;    /* Hardcoded center. knowing the margin size it's about 51%. */
-  }
-
-  .green-circle {
-    background-color: green;
-    margin-left: 31px;
   }
